--- a/public/ixn/triggers/sms-received/config.json
+++ b/public/ixn/triggers/sms-received/config.json
@@ -1,9 +1,11 @@
 {
     "key": "dewalt-sms-received-demo",
+    "icon": "images/push.png",
+    "iconSmall": "images/sms.png", 
     "lang": {
         "en-US": {
             "name": "Text Received to Short Code",
-            "description": "This is a simple trigger for the Hello World demo app"
+            "description": "Triggered when a text to a short code is received."
         }
     },
     "version": "2.0",
